@@ -27,6 +27,9 @@
 ; ignore	== (any)			[ignore arg, output blank]
 ; type*		== (type *)			[pointer to any other type]
 ; enum (key=value,key=value,...)		[enumeration, see below]
+; array(type,argN)
+;		== (type[SIZE])			[array of (arg N) elements]
+; array(type,N)	== (type[N])			[array of N elements]
 
 ; Backwards-compatibility:
 ; string0	== (char *)			[same as string[retval]]
@@ -48,6 +51,12 @@
 ; an example usage might look like
 ;   int fcntl(int,enum (F_DUPFD=0,F_GETFD=1,F_SETFD=2))
 ;
+; Arrays
+;
+; NOTE: Uses of array(...) alone are very rare. You almost always
+; want array(...)*. The exceptions are when you have a fixed-size
+; array.
+
 
 ; arpa/inet.h
 int inet_aton(string,addr);
